--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,39 @@
 
   <body>
 
+        {{#if loggedInUser}}
+        <p>Welcome {{loggedInUser}}</p>
+        <form action="/logout" method="POST">
+            <button type="submit">Logout</button>
+        </form>
+        {{/if}}
+
+        <nav>
+          <ul>
+              {{#if loggedInUser}}
+
+                <li>
+                    <a href="/main">Go to Main</a>
+                </li>
+
+                <li>
+                    <a href="/private">Go to Private</a>
+                </li>
+
+              {{else}}
+                <li>
+                <a href="/signup">Signup</a>
+                </li>
+
+                <li>
+                    <a href="/login">Login</a>
+                </li>
+
+              {{/if}}
+
+          </ul>
+        </nav>
+
     {{{body}}}
 
     <script src="/js/script.js"></script>
